[tool.poetry]
name = "mcp-kg-inquirer"
version = "0.0.1"
description = "MCP Knowledge Graph Inquirer"
authors = ["Idea Bosque"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
homepage = "https://github.com/ideabosque/mcp_kg_inquirer"
repository = "https://github.com/ideabosque/mcp_kg_inquirer"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
